interim commit - generates candidates to all the queries in "queries.txt"